testdata/baselines/reference/compiler/tluaDottedFunctionAnnotatedTable.errors.txt
tluaDottedFunctionAnnotatedTable.tlua(12,14): error TS2322: Type '(a: string) => string' is not assignable to type '(a: number) => number'.
  Types of parameters 'a' and 'a' are incompatible.
    Type 'number' is not assignable to type 'string'.
tluaDottedFunctionAnnotatedTable.tlua(16,14): error TS2339: Property 'absent' does not exist on type 'Ops'.


==== tluaDottedFunctionAnnotatedTable.tlua (2 errors) ====
    interface Ops {
      good(a: number): number;
      wrong(a: number): number;
    }
    
    local ops: Ops = { good = function(a: number) return a; end, wrong = function(a: number) return a; end };
    
    function ops.good(a: number): number
      return a;
    end
    
    function ops.wrong(a: string): string
                 ~~~~~
!!! error TS2322: Type '(a: string) => string' is not assignable to type '(a: number) => number'.
!!! error TS2322:   Types of parameters 'a' and 'a' are incompatible.
!!! error TS2322:     Type 'number' is not assignable to type 'string'.
      return a;
    end
    
    function ops.absent(): void
                 ~~~~~~
!!! error TS2339: Property 'absent' does not exist on type 'Ops'.
    end
    